src/raylib/RayLib3.pas


  { Texture maps generation (PBR) }
  // NOTE: Required shaders should be provided

  // Generate cubemap texture from 2D panorama texture
  GenTextureCubemap: function(shader: TShader; map: TTexture2D; size: Integer): TTextureCubemap; cdecl;
  // Generate irradiance texture using cubemap data
  GenTextureIrradiance: function(shader: TShader; cubemap: TTextureCubemap; size: Integer): TTextureCubemap; cdecl;
  // Generate prefilter texture using cubemap data
  GenTexturePrefilter: function(shader: TShader; cubemap: TTextureCubemap; size: Integer): TTextureCubemap; cdecl;
  // Generate BRDF texture
  GenTextureBRDF: function(shader: TShader; size: Integer): TTexture2D; cdecl;

  { Shading begin/end functions }

  // Begin custom shader drawing
  BeginShaderMode: procedure(shader: TShader); cdecl;
  // End custom shader drawing (use default shader)
  EndShaderMode: procedure; cdecl;
  // Begin blending mode (alpha, additive, multiplied)
  BeginBlendMode: procedure(mode: Integer); cdecl;
  // End blending mode (reset to default: alpha blending)
  EndBlendMode: procedure; cdecl;

  { VR control functions }

  // Init VR simulator for selected device parameters
  InitVrSimulator: procedure; cdecl;
  // Close VR simulator for current device
  CloseVrSimulator: procedure; cdecl;
  // Update VR tracking (position and orientation) and camera
  UpdateVrTracking: procedure(camera: PCamera); cdecl;
  // Set stereo rendering configuration parameters
  SetVrConfiguration: procedure(info: TVrDeviceInfo; distortion: TShader); cdecl;
  // Detect if VR simulator is ready
  IsVrSimulatorReady: function: Boolean; cdecl;
  // Enable/Disable VR experience
  ToggleVrMode: procedure; cdecl;
  // Begin VR simulator stereo rendering
  BeginVrDrawing: procedure; cdecl;
  // End VR simulator stereo rendering
  EndVrDrawing: procedure; cdecl;

//------------------------------------------------------------------------------------
// Audio Loading and Playing Functions (Module: audio)
//------------------------------------------------------------------------------------

  { Audio device management functions }

  // Initialize audio device and context
  InitAudioDevice: procedure; cdecl;
  // Close the audio device and context
  CloseAudioDevice: procedure; cdecl;
  // Check if audio device has been initialized successfully
  IsAudioDeviceReady: function: Boolean; cdecl;
  // Set master volume (listener)
  SetMasterVolume: procedure(volume: Single); cdecl;

  { Wave/Sound loading/unloading functions }

  // Load wave data from file
  LoadWave: function(const fileName: PUTF8Char): TWave; cdecl;
  // Load wave from memory buffer, fileType refers to extension: i.e. "wav"
  LoadWaveFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer): TImage; cdecl;
  // Load sound from file
  LoadSound: function(const fileName: PUTF8Char): TSound; cdecl;
  // Load sound from wave data
  LoadSoundFromWave: function(wave: TWave): TSound; cdecl;
  // Update sound buffer with new data
  UpdateSound: procedure(sound: TSound; const data: Pointer; samplesCount: Integer); cdecl;
  // Unload wave data
  UnloadWave: procedure(wave: TWave); cdecl;
  // Unload sound
  UnloadSound: procedure(sound: TSound); cdecl;
  // Export wave data to file
  ExportWave: function(wave: TWave; const fileName: PUTF8Char): Boolean; cdecl;
  // Export wave sample data to code (.h)
  ExportWaveAsCode: function(wave: TWave; const fileName: PUTF8Char): Boolean; cdecl;

  { Wave/Sound management functions }

  // Play a sound
  PlaySound: procedure(Sound: TSound); cdecl;
  // Stop playing a sound
  StopSound: procedure(Sound: TSound); cdecl;
  // Pause a sound
  PauseSound: procedure(Sound: TSound); cdecl;
  // Resume a paused sound
  ResumeSound: procedure(Sound: TSound); cdecl;
  // Play a sound (using multichannel buffer pool)
  PlaySoundMulti: procedure(Sound: TSound); cdecl;
  // Stop any sound playing (using multichannel buffer pool)
  StopSoundMulti: procedure; cdecl;
  // Get number of sounds playing in the multichannel
  GetSoundsPlaying: function: Integer; cdecl;
  // Check if a sound is currently playing
  IsSoundPlaying: function(Sound: TSound): Boolean; cdecl;
  // Set volume for a sound (1.0 is max level)
  SetSoundVolume: procedure(Sound: TSound; volume: Single); cdecl;
  // Set pitch for a sound (1.0 is base level)
  SetSoundPitch: procedure(Sound: TSound; pitch: Single); cdecl;
  // Convert wave data to desired format
  WaveFormat: procedure(Wave: PWave; sampleRate: Integer; sampleSize: Integer; channels: Integer); cdecl;
  // Copy a wave to a new wave
  WaveCopy: function(Wave: TWave): TWave; cdecl;
  // Crop a wave to defined samples range
  WaveCrop: procedure(Wave: PWave; initSample: Integer; finalSample: Integer); cdecl;
  // Get samples data from wave as a floats array
  LoadWaveSamples: function(Wave: TWave): PSingle; cdecl;
  // Unload samples data loaded with LoadWaveSamples()
  UnloadWaveSamples: procedure(samples: PSingle); cdecl;

  { Music management functions }

  // Load music stream from file
  LoadMusicStream: function(const FileName: PUTF8Char): TMusic; cdecl;
  // Unload music stream
  UnloadMusicStream: procedure(Music: TMusic); cdecl;
  // Start music playing
  PlayMusicStream: procedure(Music: TMusic); cdecl;
  // Updates buffers for music streaming
  UpdateMusicStream: procedure(Music: TMusic); cdecl;
  // Stop music playing
  StopMusicStream: procedure(Music: TMusic); cdecl;
  // Pause music playing
  PauseMusicStream: procedure(Music: TMusic); cdecl;
  // Resume playing paused music
  ResumeMusicStream: procedure(Music: TMusic); cdecl;
  // Check if music is playing
  IsMusicPlaying: function(Music: TMusic): Boolean; cdecl;
  // Set volume for music (1.0 is max level)
  SetMusicVolume: procedure(Music: TMusic; volume: Single); cdecl;
  // Set pitch for a music (1.0 is base level)
  SetMusicPitch: procedure(Music: TMusic; pitch: Single); cdecl;
  // Get music time length (in seconds)
  GetMusicTimeLength: function(Music: TMusic): Single; cdecl;
  // Get current music time played (in seconds)
  GetMusicTimePlayed: function(Music: TMusic): Single; cdecl;

  { AudioStream management functions }

  // Init audio stream (to stream raw audio pcm data)
  InitAudioStream: function(SampleRate: Cardinal; SampleSize: Cardinal; Channels: Cardinal): TAudioStream; cdecl;
  // Update audio stream buffers with data
  UpdateAudioStream: procedure(Stream: TAudioStream; const Data: Pointer; SamplesCount: Integer); cdecl;
  // Close audio stream and free memory
  CloseAudioStream: procedure(stream: TAudioStream); cdecl;
  // Check if any audio stream buffers requires refill
  IsAudioStreamProcessed: function(Stream: TAudioStream): Boolean; cdecl;
  // Play audio stream
  PlayAudioStream: procedure(stream: TAudioStream); cdecl;
  // Pause audio stream
  PauseAudioStream: procedure(stream: TAudioStream); cdecl;
  // Resume audio stream
  ResumeAudioStream: procedure(stream: TAudioStream); cdecl;
  // Check if audio stream is playing
  IsAudioStreamPlaying: function(stream: TAudioStream): Boolean; cdecl;
  // Stop audio stream
  StopAudioStream: procedure(stream: TAudioStream); cdecl;
  // Set volume for audio stream (1.0 is max level)
  SetAudioStreamVolume: procedure(stream: TAudioStream; volume: Single); cdecl;
  // Set pitch for audio stream (1.0 is base level)
  SetAudioStreamPitch: procedure(stream: TAudioStream; pitch: Single); cdecl;
  // Default size for new audio streams
  SetAudioStreamBufferSizeDefault: procedure(size: Integer); cdecl;

//------------------------------------------------------------------------------------
// Network (Module: network)
//------------------------------------------------------------------------------------

// IN PROGRESS: Check rnet.h for reference

{*
  Load library dynamically, use RayLib.Load to load it
*}

type

  { TmncRayLib }

  TmncRayLib = class(TmnLibrary)
  public
  protected
    procedure Link; override;
  end;

var
  RayLib: TmncRayLib = nil;

function Vector2Of(X, Y: Single): TVector2;

implementation

function Vector2Of(X, Y: Single): TVector2;
begin
  Result.X := X;
  Result.Y := Y;
end;

{ TColor }

class operator TColor.Explicit(a: TRGBAColor): TColor;
begin
  Result.RGBA := a;
end;

class operator TColor.Explicit(a: Cardinal): TColor;
begin
  Result.Value := a;
end;

class operator TColor.Equal(a, b: TColor): Boolean;
begin
  Result := a.Value = b.Value;
end;

class operator TColor.Implicit(a: TRGBAColor): TColor;
begin
  Result.RGBA := a;
end;

class operator TColor.Implicit(a: Cardinal): TColor;
begin
  Result.Value := a;
end;

{ TRectangle }

constructor TRectangle.Create(AX, AY, AWidth, AHeight: Single);
begin
  X:= AX;
  Y:= AY;
  Width := AWidth;
  Height := AHeight;
end;

{ TColor }

function TColorHelper.Alpha(AAlpha: Byte): TColor;
begin
  Result := Self;
  Result.RGBA.Alpha := AAlpha;
end;

constructor TColorHelper.Create(ARed, AGreen, ABlue, AAlpha: Byte);
var
  aRGBAColor: TRGBAColor;
  aColor: TColor absolute aRGBAColor;
begin
  with aRGBAColor do
  begin
    Red := ARed;
    Green := AGreen;
    Blue := ABlue;
    Alpha := AAlpha;
  end;
  Self := aColor;
end;

constructor TColorHelper.Create(RGBAColor: TRGBAColor);
var
  aColor: TColor absolute RGBAColor;
begin
  Self := aColor;
end;

constructor TColorHelper.Create(AValue: Cardinal);
begin
  {$ifdef ENDIAN_LITTLE}
  Self := AValue;
  {$else}
  Self := AValue; //TODO Swap it SwapEndian()
  {$endif}
end;

constructor TColorHelper.CreateRGBA(RGBA: Cardinal);
begin
  {$ifdef ENDIAN_LITTLE}
  Self := SwapEndian(RGBA);
  {$else}
  Self := RGBA; //TODO Swap it SwapEndian()
  {$endif}
end;

{ TVector2 }

constructor TVector2.Create(AX, AY: Single);
begin
  X := AX;
  Y := AY;
end;

constructor TVector2.Create(I: Int64);
begin
  Self := TVector2(i);
end;

{ TmncRayLib }
